<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/pcTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TITLE"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="40dp" />

    <TextView
    android:id="@+id/pcDecription"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Description"
    android:textAlignment="textStart"
    android:textSize="20dp" />

    <TextView
        android:id="@+id/pcData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="PubData"
        android:textAlignment="textStart"
        android:textSize="20dp" />
</LinearLayout>
